# khor

./: .gitattributes  .gitignore  ARCHITECTURE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  index.js  package.json
.claude/: settings.local.json
.github/workflows/: ci.yml
bpf/: khor.bpf.c  khor.h
daemon/: CMakeLists.txt
daemon/include/khor/: audio.h  metrics.h
daemon/src/: audio_synth.cpp  main.cpp  metrics.cpp
daemon/src/app/: app.cpp  app.h  config.cpp  config.h
daemon/src/audio/: dsp.h  engine.cpp  engine.h
daemon/src/bpf/: collector.cpp  collector.h
daemon/src/engine/: music.cpp  music.h  note_event.h  signals.cpp  signals.h
daemon/src/http/: server.cpp  server.h
daemon/src/midi/: alsa_seq.cpp  alsa_seq.h
daemon/src/osc/: encode.h  osc.cpp  osc.h
daemon/src/util/: json.cpp  json.h  paths.cpp  paths.h  spsc_queue.h
daemon/tests/: test_main.cpp
docs/plans/: 2026-03-28-midi-channels-and-new-signals-design.md  2026-03-28-midi-channels-and-new-signals.md
scripts/: demo-disk.sh  demo-everything.sh  demo-exec.sh  demo-network.sh  demo-pressure.sh  demo-scheduler.sh  fetch_deps.sh  install.sh  linux-build.sh  linux-check.sh  linux-run.sh  uninstall.sh  wsl-build.sh  wsl-check.sh  wsl-run.sh
systemd/: khor.service
ui/: package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/visualizer/: KhorVisualizer.tsx  controls.tsx  engine.ts  flowfield.ts  particles.ts  presets.ts  signals.ts
